--- a/frontend/src/styles/Login.css
+++ b/frontend/src/styles/Login.css
@@ -1,5 +1,5 @@
 .signUp {
-    background-color: #f66464;
+    background-color: #ed4242;
     color: white;
     padding: 12px 25px;
     border-radius: 8px;
