--- a/frontend/src/styles/Homepage.css
+++ b/frontend/src/styles/Homepage.css
@@ -83,6 +83,7 @@
   max-width: 80%;
   min-width: 80%;
   border-radius: 10px;
+  
 }
 
 .post-item:hover {
@@ -94,6 +95,7 @@
   font-size: 24px;
   font-weight: bold;
   color: #060505;
+  overflow-wrap: break-word;
 }
 
 .description {
@@ -226,6 +228,7 @@
     min-width :100%;
     padding: 15px;
     margin: 10px 0;
+    
   }
 
   .post-image {
