--- a/frontend/src/styles/Homepage.css
+++ b/frontend/src/styles/Homepage.css
@@ -106,53 +106,59 @@
 }
 
 .post-item img {
-  
   width: 100%;
   height: 100%;
 
 }
-/* Upvote Button */
-.vote-buttons {
+/* buttons container */
+.buttons-container{
   display: flex;
   gap: 10px;
   align-items: center;
   margin: 10px 0;
 }
 
-.vote-button {
+.vote-buttons{
+  display: flex;
+  gap: 10px;
+ 
+}
+
+.action-button {
   background: none;
   border: 1px solid #ddd;
   border-radius: 4px;
-  padding: 5px 10px;
+  padding: 5px 20px;
   cursor: pointer;
   display: flex;
   align-items: center;
   gap: 5px;
+  min-height: 32px;
+  font-size: 14px;
+  transition: background 0.2s ease;
 }
 
-.vote-button:hover:not(:disabled) {
-  background-color: #f5f5f5;
+.action-button:hover:not(:disabled) {
+  background-color: #e9e7e7;
 }
 
-.vote-button:disabled {
+.action-button:disabled {
   cursor: not-allowed;
   opacity: 0.6;
 }
 
-.vote-button.active {
-  font-weight: bold;
-}
-
-/* Specific styles for upvote button */
-.vote-button:first-child.active {
+.action-button.upvote.active {
   background-color: #03d438cc;
-  border:none;
+  border: none;
+  font-weight: bold;
+  color: white;
 }
 
-/* Specific styles for downvote button */
-.vote-button:last-child.active {
+.action-button.downvote.active {
   background-color: #7193FF;
-  border:none;
+  border: none;
+  color: white;
+  font-weight: bold;
 }
 
 /* Navbar */
@@ -211,6 +217,8 @@
   margin-right: 20px;
 
 }
+
+
 /* Mobile Responsiveness */
 @media (max-width: 768px) {
   .homepage-container {
